fixed bubble component background alignment, added separate svg version for mobile

--- a/src/Components/Bubbles/BubbleCluster.module.css
+++ b/src/Components/Bubbles/BubbleCluster.module.css
@@ -15,6 +15,9 @@
   height: 100%;
   z-index: 0;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .svgBackground svg {
@@ -22,7 +25,7 @@
   height: 100%;
   object-fit: cover;
   transform: scale(1.5);
-  transform-origin: 26rem 2rem;
+  transform-origin: center center;
 }
 
 .backgroundPattern {
